[gd_scene load_steps=4 format=2]

[ext_resource path="res://Dialog/next-indicator.png" type="Texture" id=1]
[ext_resource path="res://Lexical/Sentence/InteractiveSentence.tscn" type="PackedScene" id=2]
[ext_resource path="res://Test/DeducingCoop/DeducingCoopSelectSentenceUnit.gd" type="Script" id=3]

[node name="DeducingCoopSelectSentenceUnit" type="Node2D"]
script = ExtResource( 3 )

[node name="Indicator" type="Sprite" parent="."]
modulate = Color( 0.270588, 0.270588, 0.270588, 1 )
position = Vector2( 8.84746, -9.56647 )
scale = Vector2( 0.234605, 0.219454 )
texture = ExtResource( 1 )

[node name="InteractiveSentence" parent="." instance=ExtResource( 2 )]
position = Vector2( 51.2523, -19.9645 )

[node name="Button" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 3.0
margin_top = -20.0
margin_right = 171.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_Button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
